--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@ Error message and password prompt
 
 <li>$:/state/commander/snr/select-tiddler</li>
 
+<li>$:/state/compInspect/temp/commander/selectState-tiddler</li>
+
 <li>$:/state/edit/references--2139526261</li>
 
 <li>$:/state/edit/references-1803040483</li>
@@ -562,6 +564,8 @@ Error message and password prompt
 
 <li>Monitor Hypothesis</li>
 
+<li>MyCSS</li>
+
 <li>Perils of Positive Thinking</li>
 
 <li>Recovering Lifehacker</li>
@@ -633,7 +637,7 @@ Error message and password prompt
 {"created":"20220525025547188","text":"\\rules only html image macrocallinline syslink transcludeinline wikilink prettylink filteredtranscludeblock macrocallblock transcludeblock latex-parser","title":"$:/config/markdown/renderWikiTextPragma","modified":"20220525025554831"},
 {"created":"20220525032340649","title":"$:/config/Navigation/openLinkFromInsideRiver","text":"below","modified":"20220525192553035"},
 {"created":"20220526121008195","title":"$:/config/NewJournal/Text","text":"","modified":"20220527164031194"},
-{"created":"20220525030609545","text":"hide","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/advanced-search","modified":"20220525030612424"},
+{"created":"20220525030609545","text":"show","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/advanced-search","modified":"20220617130813042"},
 {"created":"20220617111415637","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel","text":"show","modified":"20220617112014092"},
 {"created":"20220525231346815","text":"show","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home","modified":"20220525231346816"},
 {"created":"20220525030606726","text":"show","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/import","modified":"20220617112014092"},
@@ -698,7 +702,8 @@ Error message and password prompt
 {"created":"20220525044002023","title":"$:/state/commander/snr/gm","text":"","modified":"20220608112703300"},
 {"created":"20220525043422586","title":"$:/state/commander/snr/replace-text","text":"{{!!Tended}}","modified":"20220608125922561"},
 {"created":"20220525043438669","title":"$:/state/commander/snr/replace-text-with","text":"{{!!tended}}","modified":"20220608125929214"},
-{"created":"20220525043451936","title":"$:/state/commander/snr/select-tiddler","text":"🌳 Consensus as Religion","modified":"20220608121913818"},
+{"created":"20220525043451936","title":"$:/state/commander/snr/select-tiddler","text":"","modified":"20220617130712910"},
+{"created":"20220617130712910","title":"$:/state/compInspect/temp/commander/selectState-tiddler","text":"","modified":"20220617130712910"},
 {"created":"20220525111053007","title":"$:/state/edit/references--2139526261","text":"show","modified":"20220525111053007"},
 {"created":"20220530151610422","title":"$:/state/edit/references-1803040483","text":"show","modified":"20220530151610422"},
 {"created":"20220607120553185","title":"$:/state/editpreviewtype","text":"$:/core/ui/EditTemplate/body/preview/output","modified":"20220607120555892"},
@@ -731,12 +736,12 @@ Error message and password prompt
 {"created":"20220528005601914","title":"$:/state/tab-1884123084","text":"Idea","modified":"20220530154123648"},
 {"created":"20220608122508115","title":"$:/state/tab-1892611635","text":"$:/plugins/kookma/commander/field/uicomp/add-fields","modified":"20220608125658416"},
 {"created":"20220531123321105","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20220616111703117"},
-{"created":"20220525043354244","title":"$:/state/tab-668442618","text":"$:/plugins/kookma/commander/snr/ui","modified":"20220608125832115"},
+{"created":"20220525043354244","title":"$:/state/tab-668442618","text":"$:/plugins/kookma/commander/tiddler/ui","modified":"20220617130724267"},
 {"created":"20220525042741250","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/Recent","modified":"20220616201830606"},
 {"created":"20220524223105551","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20220525122118115"},
 {"created":"20220525191936790","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/PageControls","modified":"20220617115510043"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","text":"","list":"Contents"},
+{"title":"$:/StoryList","created":"20220617130617575","text":"","list":"Contents","modified":"20220617131613996"},
 {"title":"$:/StoryList-2","created":"20220525031034103","list":"","modified":"20220525031550539"},
 {"title":"$:/StoryList-3","created":"20220525031037856","list":"","modified":"20220525031037856"},
 {"created":"20220525032440132","title":"$:/theme","text":"$:/themes/tiddlywiki/vanilla","modified":"20220525192033778"},
@@ -814,6 +819,7 @@ Error message and password prompt
 {"created":"20220524160616356","text":"Date planted: {{!!planted}}\u003Cbr />Date last tended: {{!!tended}}\u003Cbr />\u003Chr>\n\nA form of philosophical [[monism]] - holds that matter is the fundamental substance in nature. All things, including consciousness, are results of material interactions. Contrasts with ‘idealism.’\n\nPhysicalism is now the preferred term by some, or seen as synonymous.\n\nPanPsychism is a contradictory philosophy.\n\n## References\n\n[[Materialism|https://en.wikipedia.org/wiki/Materialism]]","title":"materialism","type":"text/x-markdown","modified":"20220608125935613","tags":"exported Philosophy","planted":"","tended":""},
 {"created":"20220524160617319","text":"Date planted: {{!!planted}}\u003Cbr />Date last tended: {{!!tended}}\u003Cbr />\u003Chr>\n\nAttributes oneness or singleness to a concept - a term specific to philosophy.\n\nPhilosophical monism is generally used in Western philosophy to typify positions in the ‘mind-body problem’\n\nIt was introduced in the 18th century by Christian von Wolff in his work *Logic* to refer to the attempt to eliminate the dichotomy of body and mind - to explain all phenomena by a unifying principle, of a single substance\n\n## References\n\n[[Monism - Wikipedia|https://en.wikipedia.org/wiki/Monism]]","title":"monism","type":"text/x-markdown","modified":"20220608125935614","tags":"exported Philosophy","planted":"","tended":""},
 {"created":"20220524160617829","text":"Date planted: {{!!planted}}\u003Cbr />Date last tended: {{!!tended}}\u003Cbr />\u003Chr>\n\n[[Language Acquisition|language-acquisition.md]]","title":"Monitor Hypothesis","type":"text/x-markdown","modified":"20220608125935615","tags":"exported [[Language Acquisition]]","planted":"","tended":""},
+{"created":"20220617131030926","text":".krystal-header .tc-sidebar-search {\n  display: none;\n}","tags":"$:/tags/Stylesheet","title":"MyCSS","modified":"20220617131606264"},
 {"created":"20220524160641585","text":"Date planted: {{!!planted}}\u003Cbr />Date last tended: {{!!tended}}\u003Cbr />\u003Chr>\n* Optimism - natural vs learned - requires deliberate self-deception \n* Self-esteem mvmt \n* Visualization - attraction - the secret\n* Affirmations\n* The subtle art of not giving a fuck\n* \n### Alternatives:\n\n* Resilience/grit\n* CBT\n* Defensive pessimism\n* Equanimity\n* If this isn’t nice...\n* Mindfulness\n* \n## References\n\n[[The Positive Power of Negative Thinking|https://www.librarything.com/work/583883]]","title":"Perils of Positive Thinking","type":"text/x-markdown","modified":"20220608125935616","tags":"exported","planted":"","tended":""},
 {"created":"20220524160643887","text":"Date planted: {{!!planted}}\u003Cbr />Date last tended: {{!!tended}}\u003Cbr />\u003Chr>\n\n# Confessions of a recovering lifehacker\n\n“Maybe all the time I spend looking for better ways to do things is keeping me from, well, doing things.”\n\n“That’s because most of the stuff that pours out of these sites isn’t really about hacking your life. It’s about constantly fiddling around with all the bullshit that too often gets in the way of your life:”\n\n“But is that really the way you want to think about your life?”\n\nI think lifehacking is so seductive because it’s simply easier than asking some bigger, harder, more important questions about where your time and attention go.\n\n1. **Less lifehacking, more life-designing.**\n2. This has nothing to do with being artsy. It just means: start from scratch, question assumptions, and imagine outcomes. The point is that you envision what you *want* to do/be/happen first — not tools, process, defaults, or “what’s possible.” It’s hard, but it clarifies what’s real right up front, when it matters most.\n\nWhen you assume that what you’ve got in-hand, right now, is good enough, you stay focused on doing — not fiddling.\n\nThe least possible (practical) amount of organization is best.\n\nabove a certain threshold, imposing more order on a system detracts from its effectiveness.\n\n1. **You are very important, but only to certain people. Make sure you identify them correctly.**\n2. Why do I check my inbox, twitter feed, smartphone notifications, and blog stats like a crack fiend? Because **I really like feeling important.** I like getting messages instantly because their manufactured urgency makes me feel like my attention is a hot commodity clamored for by thronging masses. And it’s true: my attention *is* a hot commodity. But not to 95% of the people behind those dings and pings. They don’t really care about me or my attention at all, other than as a means to their own ends. If I emailed them back right now, or two hours from now, tomorrow, never — it very well might make no real difference in the big picture. You know who does care about my attention? My wife. My friends (and not the Facebook variety). The family members I don’t call often enough. To them, I actually *am* important. Why not act accordingly?\n\n## References\n\n[[Confessions of a Recovering Lifehacker|https://lifehacker.com/confessions-of-a-recovering-lifehacker-5912815]]","title":"Recovering Lifehacker","type":"text/x-markdown","modified":"20220608125935618","tags":"exported ADHD Organization Productivity","planted":"","tended":""},
 {"created":"20220524160644785","text":"Date planted: {{!!planted}}\u003Cbr />Date last tended: {{!!tended}}\u003Cbr />\u003Chr>\n\nWhy? The bass player will generally have the root note, so no need to duplicate it on the keyboard. Also helps chords flow from one to the next more smoothly. Also reduces hand movement.\n\nBest if centered around middle C\n\n# References\n\n[[Rootless Chord Voicings|https://www.pianogroove.com/jazz-piano-lessons/rootless-chord-voicings/]]","title":"Rootless Voicings","type":"text/x-markdown","modified":"20220608125935623","tags":"exported Music Chords","planted":"","tended":""},
