--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ Error message and password prompt
 {"created":"20220524223105551","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20220525122118115"},
 {"created":"20220525191936790","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/ViewToolbar","modified":"20220525231337798"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"created":"20220617183043358","title":"$:/StoryList","text":"","list":"$:/ControlPanel Contents [[Draft of 'Home']]","modified":"20220617183726977"},
+{"title":"$:/StoryList","created":"20220617183043358","text":"","list":"$:/ControlPanel [[Draft of 'Home']]","modified":"20220617183726977"},
 {"title":"$:/StoryList-2","created":"20220525031034103","list":"","modified":"20220525031550539"},
 {"title":"$:/StoryList-3","created":"20220525031037856","list":"","modified":"20220525031037856"},
 {"created":"20220525032440132","title":"$:/theme","text":"$:/themes/tiddlywiki/vanilla","modified":"20220525192033778"},
