--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/plugins/kookma/commander</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/kookma/favorites</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/kookma/shiraz</li>
 
 <li>$:/config/Plugins/Disabled/$:/plugins/kookma/thinkup</li>
@@ -237,6 +239,8 @@ Error message and password prompt
 <li>$:/config/Plugins/Disabled/$:/plugins/kookma/toc</li>
 
 <li>$:/config/Plugins/Disabled/$:/plugins/kookma/todolist</li>
+
+<li>$:/config/Plugins/Disabled/$:/plugins/kookma/trashbin</li>
 
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown</li>
 
@@ -651,11 +655,13 @@ Error message and password prompt
 {"created":"20220617111415639","title":"$:/config/PageControlButtons/Visibility/R:/plugins/kookma/utility/ui/Buttons/ViewFields","text":"show","modified":"20220619104614476"},
 {"created":"20220525042753083","title":"$:/config/Plugins/Disabled/$:/plugins/BTC/tiddlywiki-multi-columns","text":"yes","modified":"20220525042753083"},
 {"created":"20220525192745810","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/commander","text":"no","modified":"20220525231753843"},
+{"created":"20220619113108999","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/favorites","text":"yes","modified":"20220619113108999"},
 {"created":"20220525182205698","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/shiraz","text":"no","modified":"20220525231748075"},
 {"created":"20220525182220872","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/thinkup","text":"yes","modified":"20220530191704280"},
 {"created":"20220525182228866","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/timelines","text":"no","modified":"20220525231756582"},
 {"created":"20220525232218281","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/toc","text":"yes","modified":"20220525232218281"},
 {"created":"20220525192801998","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/todolist","text":"yes","modified":"20220530130200193"},
+{"created":"20220619113124739","title":"$:/config/Plugins/Disabled/$:/plugins/kookma/trashbin","text":"yes","modified":"20220619113124739"},
 {"created":"20220525192726590","title":"$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown","text":"no","modified":"20220525231745082"},
 {"created":"20220525024958433","text":"yes","title":"$:/config/RelinkOnRename","modified":"20220525024958433"},
 {"created":"20220525031827263","title":"$:/config/story-river/dragging-enable","text":"no","modified":"20220525031827263"},
@@ -731,7 +737,7 @@ Error message and password prompt
 {"created":"20220528122748715","title":"$:/state/tab--86143343","text":"$:/core/ui/ControlPanel/Plugins/Installed/Plugins","modified":"20220528122751524"},
 {"created":"20220525191750117","title":"$:/state/tab--959111941","text":"$:/core/ui/ControlPanel/Cascades","modified":"20220619110422881"},
 {"created":"20220525122040930","title":"$:/state/tab-1290964142","text":"Journal","modified":"20220525122112298"},
-{"created":"20220524215400384","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Appearance","modified":"20220619111038997"},
+{"created":"20220524215400384","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Plugins","modified":"20220619113052256"},
 {"created":"20220528005601914","title":"$:/state/tab-1884123084","text":"Idea","modified":"20220530154123648"},
 {"created":"20220608122508115","title":"$:/state/tab-1892611635","text":"$:/plugins/kookma/commander/field/uicomp/add-fields","modified":"20220608125658416"},
 {"created":"20220531123321105","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20220616111703117"},
@@ -740,7 +746,7 @@ Error message and password prompt
 {"created":"20220524223105551","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20220525122118115"},
 {"created":"20220525191936790","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/ViewToolbar","modified":"20220525231337798"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20220619104738771","text":"","list":"","modified":"20220619110953551"},
+{"title":"$:/StoryList","created":"20220619104738771","text":"","list":"$:/ControlPanel","modified":"20220619113118504"},
 {"title":"$:/StoryList-2","created":"20220525031034103","list":"","modified":"20220525031550539"},
 {"title":"$:/StoryList-3","created":"20220525031037856","list":"","modified":"20220525031037856"},
 {"created":"20220525032440132","title":"$:/theme","text":"$:/themes/tiddlywiki/vanilla","modified":"20220525192033778"},
