--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@ Error message and password prompt
 {"created":"20220505193946834","text":"\u003C$tiddler tiddler=\"$:/StartupAction/ReadOnly\">\n\u003C$list filter=\"\n[[TiddlyWiki Safe Mode]is[tiddler]]\n[{$:/status/IsLoggedIn}match[yes]]\n[{$:/info/url/protocol}match[file:]]\n+[then[show]else[hide]]\n\" variable=\"visibility\">\n    \u003C$list filter=\"[list[!!config-visibility]]\" variable=buttons>\n        \u003C$list filter=\"[\u003CcurrentTiddler>get\u003Cbuttons>enlist-input[]]\" variable=\"button\">\n            \u003C$action-setfield $tiddler={{{ $:/config/[\u003Cbuttons>]/Visibility/[\u003Cbutton>]+[join[]] }}} text=\u003C\u003Cvisibility>> />\n        \u003C/$list>\n    \u003C/$list>\n\u003C/$list>\n\u003C/$tiddler>","creator":"Telumire","tags":"$:/tags/StartupAction","title":"$:/StartupAction/ReadOnly","modified":"20220616202935992","modifier":"Telumire","config-visibility":"PageControlButtons ViewToolbarButtons","PageControlButtons":"$:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/new-here $:/plugins/tiddlywiki/markdown/images/new-markdown-button $:/core/ui/Buttons/import $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/refresh R:/plugins/kookma/utility/ui/Buttons/ViewFields $:/plugins/kookma/commander/buttons/pagecontrol","ViewToolbarButtons":"$:/core/ui/Buttons/edit $:/core/ui/Buttons/more-tiddler-actions"},
 {"created":"20220525113050127","title":"$:/state/add-plugin-info/$:/temp/ServerConnection/https://kookma.github.io/TW-PluginLibrary/library/index.html/$:/temp/RemoteAssetInfo/https://kookma.github.io/TW-PluginLibrary/library/index.html/$:/plugins/kookma/todolist","text":"yes","modified":"20220525113050127"},
 {"created":"20220525043003803","title":"$:/state/addplugins/tab-1342078386","text":"$:/config/KookmaPluginLibrary","modified":"20220527120614634"},
-{"created":"20220525032540366","title":"$:/state/advancedsearch/currentTab","text":"$:/core/ui/AdvancedSearch/Standard","modified":"20220618213804469"},
+{"created":"20220525032540366","title":"$:/state/advancedsearch/currentTab","text":"$:/core/ui/AdvancedSearch/System","modified":"20220619122056337"},
 {"created":"20220525044017708","title":"$:/state/commander/log-tiddler","text":"$:/temp/commander/logs/tid-16","modified":"20220608125935528"},
 {"created":"20220525044002023","title":"$:/state/commander/snr/gm","text":"","modified":"20220608112703300"},
 {"created":"20220525043422586","title":"$:/state/commander/snr/replace-text","text":"{{!!Tended}}","modified":"20220608125922561"},
@@ -718,7 +718,7 @@ Error message and password prompt
 {"created":"20220525033219031","title":"$:/state/showeditpreview-2087929767","text":"yes","modified":"20220525033219031"},
 {"created":"20220525032648461","title":"$:/state/showeditpreview-562184569","text":"yes","modified":"20220525032648461"},
 {"created":"20220525115605486","title":"$:/state/sidebar","text":"yes","modified":"20220525120035860"},
-{"created":"20220525032540367","title":"$:/state/tab--1498284803","text":"$:/core/ui/AdvancedSearch/Standard","modified":"20220618213804470"},
+{"created":"20220525032540367","title":"$:/state/tab--1498284803","text":"$:/core/ui/AdvancedSearch/System","modified":"20220619122056338"},
 {"created":"20220525030459203","title":"$:/state/tab--1963855381","text":"$:/plugins/rmnvsl/krystal/settings","modified":"20220528122729356"},
 {"created":"20220524215356768","title":"$:/state/tab--2112689675","text":"$:/core/ui/ControlPanel/Basics","modified":"20220616111647185"},
 {"created":"20220608022942682","title":"$:/state/tab--521753932","text":"$:/plugins/kookma/commander/help/uicomp/snr","modified":"20220608022942682"},
@@ -726,7 +726,7 @@ Error message and password prompt
 {"created":"20220528122748715","title":"$:/state/tab--86143343","text":"$:/core/ui/ControlPanel/Plugins/Installed/Plugins","modified":"20220528122751524"},
 {"created":"20220525191750117","title":"$:/state/tab--959111941","text":"$:/core/ui/ControlPanel/TiddlerFields","modified":"20220526113955306"},
 {"created":"20220525122040930","title":"$:/state/tab-1290964142","text":"Journal","modified":"20220525122112298"},
-{"created":"20220524215400384","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Saving","modified":"20220619113231740"},
+{"created":"20220524215400384","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Saving","modified":"20220619123139440"},
 {"created":"20220528005601914","title":"$:/state/tab-1884123084","text":"Idea","modified":"20220530154123648"},
 {"created":"20220608122508115","title":"$:/state/tab-1892611635","text":"$:/plugins/kookma/commander/field/uicomp/add-fields","modified":"20220608125658416"},
 {"created":"20220531123321105","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20220616111703117"},
@@ -735,7 +735,7 @@ Error message and password prompt
 {"created":"20220524223105551","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20220525122118115"},
 {"created":"20220525191936790","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/ViewToolbar","modified":"20220525231337798"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20220619113226163","text":"","list":"Contents","modified":"20220619113226163"},
+{"created":"20220619113226163","title":"$:/StoryList","text":"","list":"$:/ControlPanel","modified":"20220619123137596"},
 {"title":"$:/StoryList-2","created":"20220525031034103","list":"","modified":"20220525031550539"},
 {"title":"$:/StoryList-3","created":"20220525031037856","list":"","modified":"20220525031037856"},
 {"created":"20220525032440132","title":"$:/theme","text":"$:/themes/tiddlywiki/vanilla","modified":"20220525192033778"},
